--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blue Archive Student Quiz</title>
     <link rel="stylesheet" href="styles.css?v=9" type="text/css">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
     <script>
@@ -162,8 +162,17 @@
             <div class="result-actions">
                 <button id="restart-btn" class="btn-primary">Take Another Quiz</button>
             </div>
+
+            <div class="x-share-container">
+                <button class="x-share-button">
+                    <i class="fa-brands fa-x-twitter"></i>
+                    Share Score on X
+                </button>
+            </div>
+
         </div>
     </div>
+
 
     <!-- Attribution Footer -->
     <footer class="attribution-footer">
